--- a/where.html
+++ b/where.html
@@ -10,11 +10,11 @@
 <img src="image/codecartelcodes_logo.png">
 <main>
 <div class="tabs">
-<div class="tab"><a href="index.html" class="tab-link">Who</a></div>
-<div class="tab"><a href="why.html" class="tab-link">Why</a></div>
-<div class="tab"><a href="what.html" class="tab-link">What</a></div>
-<div class="tab"><a href="when.html" class="tab-link">When</a></div>
-<div class="tab active-tab"><a href="where.html" class="tab-link">Where</a></div>
+<div class="tab"><a href="index.html">Who</a></div>
+<div class="tab"><a href="why.html">Why</a></div>
+<div class="tab"><a href="what.html">What</a></div>
+<div class="tab"><a href="when.html">When</a></div>
+<div class="tab active-tab"><a href="where.html">Where</a></div>
 </div>
 <table class="custom-table"><tr><td>
 
