Fixed the buttons and table

--- a/when.html
+++ b/when.html
@@ -10,18 +10,19 @@
 <img src="image/codecartelcodes_logo.png">
 <main>
 <div class="tabs">
-<div class="tab"><a href="index.html">Who</a></div>
-<div class="tab"><a href="why.html">Why</a></div>
-<div class="tab"><a href="what.html">What</a></div>
-<div class="tab active-tab"><a href="when.html">When</a></div>
-<div class="tab"><a href="where.html">Where</a></div>
+<a href="index.html" class="button nav-button">Who</a>
+<a href="why.html" div class="button nav-button">Why</a>
+<a href="what.html" div class="button nav-button">What</a>
+<a href="when.html" div class="button active-button">When</a>
+<a href="where.html" div class="button nav-button">Where</a>
 </div>
+<div class="table-container">
 <table class="custom-table"><tr><td>
+    
 
-WHEN
-
-
-
+When    
+ 
+    
 </td></tr></table>
 </main>
 </body>
