--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CodeCartel.codes</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
 <img src="image/codecartelcodes_logo.png">
@@ -17,14 +17,25 @@
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
 <div class="table-container">
-<table class="custom-table"><tr><td>
-    
-
-Who    
+<table class="custom-table"><tr>
+<td>
+<p>The CodeCartel is a collaborative collective of IT enthusiasts.</p>
+<ul>
+<li>Web Developers</li>
+<li>Technical Recruiters</li>
+<li>System Administrators</li>
+<li>Digital Project Managers</li>
+<li>Digital Graphics Artists</li>
+<li>Cybersecurity Specialists</li>
+<li>Quality Assurance Engineers</li>
+</ul>
  
-    
+We automate software development tasks & generate passive income streams.<br>
+<p>See <a href="why.html">Why</a> we collaborate.</p>
 </td></tr></table>
 </div>
 </main>
 </body>
 </html>
+
+
