--- a/where.html
+++ b/where.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CodeCartel.codes</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
 <img src="image/codecartelcodes_logo.png">
@@ -18,11 +18,20 @@
 </div>
 <div class="table-container">
 <table class="custom-table"><tr><td>
-    
+<br> 
+The CodeCartel hosts online sessions in the comfort of your own home.
+<p>The scheduled work sessions are located here:</p>
+<ul>
+<li><a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord Server</a></li>
+<li><a href="https://docs.google.com/document/d/14-S8ab3fO6S4VVaMvfE7TvwTk8rClqxfwRWjJDqu6FE" target="_blank">Whiteboard</a></li>
+</ul>
 
-Where    
- 
-    
+The asynchronous communication is located here:
+<ul>
+<li><a href="https://codecartelcodes.slack.com" target="_blank">Slack</a></li>
+<li><a href="https://www.reddit.com/r/Codecartel" target="_blank">Subreddit</a></li>
+<li><a href="https://groups.google.com/g/CodeCartel" target="_blank">Google Group</a></li>
+</ul>
 </td></tr></table>
 </main>
 </body>
