--- a/why.html
+++ b/why.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CodeCartel.codes</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
 <img src="image/codecartelcodes_logo.png">
@@ -18,11 +18,19 @@
 </div>
 <div class="table-container">
 <table class="custom-table"><tr><td>
-    
-
-Why    
- 
-    
+<br>
+The CodeCartel solves the problems many IT professionals face.
+<ul>
+<li>Interview processes are grueling, tedious, and arbitrary</li>
+<li>Companies are requiring workers to commute to the office</li>
+<li>Large Language Models and outsourcing may take away jobs</li>
+<li>Corporate greed and fluctuating economies create layoffs</li>
+<li>Poor management causing low moral and changing job tasks</li>
+<li>Management and unrealistic deadlines often reduce morale</li>
+</ul>
+<br>
+We develop software that <i>we use</i> to achieve work-life balance.<br>
+<p>See <a href="what.html">What</a> we build together.</p>
 </td></tr></table>
 </main>
 </body>
