--- a/what.html
+++ b/what.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CodeCartel.codes</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
 <img src="image/codecartelcodes_logo.png">
@@ -18,11 +18,18 @@
 </div>
 <div class="table-container">
 <table class="custom-table"><tr><td>
-    
+<br>
+The CodeCartel automates software development tasks and passive income.
+<ul>
+<li><a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">Micromanager</a> completes the most tedious software development duties</li>
+<li><a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</li>
+<li><a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</li>
+</ul>
 
-What    
- 
-    
+More projects will be listed soon.<br>
+<p>We are also open to collaborating with you on your project.</p><br>
+
+<p>See <a href="when.html">When</a> we meet.</p>
 </td></tr></table>
 </main>
 </body>
