Fixed schedule times. Added pay.html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <p>The CodeCartel is a collaborative collective of IT enthusiasts.</p>
 <ul>
 <li>Web Developers</li>
+<li>Digital Designers</li>
 <li>Technical Recruiters</li>
 <li>System Administrators</li>
 <li>Digital Project Managers</li>
-<li>Digital Graphics Artists</li>
 <li>Cybersecurity Specialists</li>
 <li>Quality Assurance Engineers</li>
 </ul>
