--- a/what.html
+++ b/what.html
@@ -27,7 +27,7 @@ The CodeCartel automates software development tasks and passive income.
 </ul>
 
 More projects will be listed soon.<br>
-<p>We are also open to collaborating with you on your project.</p><br>
+<p>We are also open to collaborating with you on your projects.</p><br>
 
 <p>See <a href="when.html">When</a> we meet.</p>
 </td></tr></table>
