--- a/when.html
+++ b/when.html
@@ -33,7 +33,7 @@ updateCountdown();
 displayNextMeetingLocalTime();
 </script>
 
-The sessions are for Q&A, team building, brainstorming, pair-programming, free mentorship, and fun.<br><br>
+The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!<br><br>
 
 <p>See <a href="where.html">Where</a> we meet.</p>
 </td></tr></table>
