--- a/where.html
+++ b/where.html
@@ -19,7 +19,7 @@
 <div class="table-container">
 <table class="custom-table"><tr><td>
 <br> 
-The CodeCartel hosts online sessions in the comfort of your own home.
+The CodeCartel hosts online sessions (where you are comfortable).
 <p>The scheduled work sessions are located here:</p>
 <ul>
 <li><a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord Server</a></li>
