--- a/why.html
+++ b/why.html
@@ -30,7 +30,7 @@ The CodeCartel solves the problems many IT professionals face.
 </ul>
 <br>
 We develop software that <i>we use</i> to achieve work-life balance.<br>
-<p>See <a href="what.html">What</a> we build together.</p>
+<p>See <a href="what.html">What</a> projects we complete together.</p>
 </td></tr></table>
 </main>
 </body>
