Updated when, where, and mobile vertical align

--- a/when.html
+++ b/when.html
@@ -19,21 +19,14 @@
 <div class="table-container">
 <table class="custom-table"><tr><td>
 <br>
-The CodeCartel works asynchronously but also has scheduled sessions.
+The CodeCartel works asynchronously and also has conference calls.
 
-<p>The next scheduled online session is on:</p>
 <ul>
-<li><div id="meetingTime"></div></li>
-<li><div id="countdown"></div></li>
+<li><a href="https://calendar.google.com/calendar/embed?src=3d2854a4bdb0586961a20de1bc6ef3f2d3194c7ce5ea10444ef1cfaf751f7d7a%40group.calendar.google.com&ctz=America%2FNew_York" target="_blank">Click here</a> to attend a CodeCartel conference call</li>
+<li>To schedule a private conference call, <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0RISBOqhCEYbdOIxRYH7ZXfcyvIElLKm8IAJbd0W3X69mWTMb6naJFlvnlmENXkAeBRijPDNOX" target="_blank">click here</a></li>
+
 </ul>
-
-<script src="files/countdown_timer.js"></script>
-<script>
-updateCountdown();
-displayNextMeetingLocalTime();
-</script>
-
-The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!<br><br>
+<p>The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
 
 <p>See <a href="where.html">Where</a> we meet.</p>
 </td></tr></table>
