--- a/where.html
+++ b/where.html
@@ -20,9 +20,9 @@
 <table class="custom-table"><tr><td>
 <br> 
 The CodeCartel hosts online sessions (where you are comfortable).
-<p>The scheduled work sessions are located here:</p>
+<p>The scheduled conference calls are located here:</p>
 <ul>
-<li><a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord Server</a></li>
+<li><a href="https://meet.google.com/hry-tsjj-epx" target="_blank">GoogleMeet</a></li>
 <li><a href="https://docs.google.com/document/d/14-S8ab3fO6S4VVaMvfE7TvwTk8rClqxfwRWjJDqu6FE" target="_blank">Whiteboard</a></li>
 </ul>
 
