--- a/pay.html
+++ b/pay.html
@@ -23,15 +23,13 @@
 <ul>
 <li><a href="what.html">Open source projects</a> you can use to help you achieve goals</li>
 <li>Simplistic software systems that do not require a lot code</li>
-<li>Projects that pay you a share of revenue with <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
+<li>Websites where contributors get paid using affiliate links</li>
+<li>Projects that pay shares of revenue using the <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
 </ul>
 
-Projects must have a customer lifetime value of $500 or more.<br> 
-The financial model should use a series of one-time payments.<br>
-Payments go from the end client directly to each contributor.<br>
-Transactions are anonymized and published online in realtime.<br>
+<p>Payments are fully-automated, direct to you, & easy to audit.</p>
 
-<p>Join us at our <a href="when.html">next meeting</a> for more details.</p>
+Join us at our <a href="when.html">next meeting</a> for more details.
 
 </td></tr></table>
 </div>
