--- a/what.html
+++ b/what.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
-<img src="image/codecartelcodes_logo.png">
+<div><img src="image/codecartelcodes_logo.png"></div>
 <main>
 <div class="tabs">
 <a href="index.html" class="button nav-button">Who</a>
