Trying to android width

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="files/styles.css">
 </head>
 <body>
-<div><img src="image/codecartelcodes_logo.png"></div>
+<div class="logo-container">
+<img src="image/codecartelcodes_logo.png">
+</div>
 <main>
 <div class="tabs">
 <a href="index.html" class="button active-button">Who</a>
