--- a/what.html
+++ b/what.html
@@ -21,12 +21,11 @@
 <div class="table-container">
 <table class="custom-table"><tr><td>
 <br>
-The CodeCartel automates software development tasks and passive income.
-<ul>
-<li><a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">Micromanager</a> completes the most tedious software development duties</li>
-<li><a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</li>
-<li><a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</li>
-</ul>
+The CodeCartel automates software development tasks and making money.
+
+<p>&#9826; <a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">Micromanager</a> completes the most tedious software development duties</p>
+<p>&#9826; <a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</p>
+<p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p>
 
 More projects will be listed soon.<br>
 <p>We also collaborate on projects that <a href="pay.html">have these attributes</a>.</p>
