Removed table-container

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 <a href="when.html" div class="button nav-button">When</a>
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
-<div class="table-container">
-<table class="custom-table"><tr>
-<td>
+<div class="custom-table">
 <p>The CodeCartel is a collaborative collective of IT enthusiasts.</p>
 <ul>
 <li>Web Developers</li>
@@ -32,9 +30,8 @@
 <li>Quality Assurance Engineers</li>
 </ul>
  
-We automate software development tasks & generate passive income streams.<br>
+We automate software development tasks & generate passive income.<br>
 <p>See <a href="why.html">Why</a> we collaborate.</p>
-</td></tr></table>
 </div>
 </main>
 </body>
