--- a/what.html
+++ b/what.html
@@ -18,8 +18,7 @@
 <a href="when.html" div class="button nav-button">When</a>
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
-<div class="table-container">
-<table class="custom-table"><tr><td>
+<div class="custom-table">
 <br>
 The CodeCartel automates software development tasks and making money.
 
@@ -31,7 +30,7 @@ More projects will be listed soon.<br>
 <p>We also collaborate on projects that <a href="pay.html">have these attributes</a>.</p>
 
 <p>See <a href="when.html">When</a> we meet.</p>
-</td></tr></table>
+</div>
 </main>
 </body>
 </html>
