--- a/when.html
+++ b/when.html
@@ -18,8 +18,7 @@
 <a href="when.html" div class="button active-button">When</a>
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
-<div class="table-container">
-<table class="custom-table"><tr><td>
+<div class="custom-table">
 <br>
 The CodeCartel works asynchronously and also has conference calls.
 
@@ -28,10 +27,10 @@ The CodeCartel works asynchronously and also has conference calls.
 <li>To schedule a private conference call, <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0RISBOqhCEYbdOIxRYH7ZXfcyvIElLKm8IAJbd0W3X69mWTMb6naJFlvnlmENXkAeBRijPDNOX" target="_blank">click here</a></li>
 
 </ul>
-<p>The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
+<p>The sessions are for <a href="what.html">working on projects</a>, pair programming,<br> free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
 
 <p>See <a href="where.html">Where</a> we meet.</p>
-</td></tr></table>
+</div>
 </main>
 </body>
 </html>
