--- a/where.html
+++ b/where.html
@@ -18,8 +18,7 @@
 <a href="when.html" div class="button nav-button">When</a>
 <a href="where.html" div class="button active-button">Where</a>
 </div>
-<div class="table-container">
-<table class="custom-table"><tr><td>
+<div class="custom-table">
 <br> 
 The CodeCartel hosts online sessions (where you are comfortable).
 <p>The scheduled conference calls are located here:</p>
@@ -34,7 +33,7 @@ The asynchronous communication is located here:
 <li><a href="https://www.reddit.com/r/Codecartel" target="_blank">Subreddit</a></li>
 <li><a href="https://groups.google.com/g/CodeCartel" target="_blank">Google Group</a></li>
 </ul>
-</td></tr></table>
+</div>
 </main>
 </body>
 </html>
