--- a/pay.html
+++ b/pay.html
@@ -8,33 +8,29 @@
 </head>
 <body>
 <main>
-<div class="logo-container">
-<img src="image/codecartelcodes_logo.png">
-</div>
-<div class="tabs">
-<a href="index.html" class="button nav-button">Who</a>
-<a href="why.html" div class="button nav-button">Why</a>
-<a href="what.html" div class="button nav-button">What</a>
-<a href="when.html" div class="button nav-button">When</a>
-<a href="where.html" div class="button nav-button">Where</a>
-</div>
-<div class="table-container">
-<table class="custom-table"><tr>
-<td>
-<p>The CodeCartel focuses projects designed to help contributors:</p>
-<ul>
-<li><a href="what.html">Open source projects</a> you can use to help you achieve goals</li>
-<li>Simplistic software systems that do not require a lot code</li>
-<li>Websites where contributors get paid using affiliate links</li>
-<li>Projects that pay shares of revenue using the <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
-</ul>
+    <div class="logo-container">
+        <img src="image/codecartelcodes_logo.png">
+    </div>
+    <div class="tabs">
+        <a href="index.html" class="button nav-button">Who</a>
+        <a href="why.html" div class="button nav-button">Why</a>
+        <a href="what.html" div class="button nav-button">What</a>
+        <a href="when.html" div class="button nav-button">When</a>
+        <a href="where.html" div class="button nav-button">Where</a>
+    </div>
+    <div class="custom-table">
+        <p>The CodeCartel focuses projects designed to help contributors:</p>
+        <ul>
+        <li><a href="what.html">Open source projects</a> you can use to help you achieve goals</li>
+        <li>Simplistic software systems that do not require a lot code</li>
+        <li>Websites where contributors get paid using affiliate links</li>
+        <li>Projects that pay shares of revenue using the <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
+        </ul>
 
-<p>Payments are fully-automated, direct to you, & easy to audit.</p>
+        <p>Payments are fully-automated, direct to you, & easy to audit.</p>
 
-Join us at our <a href="when.html">next meeting</a> for more details.
-
-</td></tr></table>
-</div>
+        Join us at our <a href="when.html">next meeting</a> for more details.
+    </div>
 </main>
 </body>
 </html>
