--- a/why.html
+++ b/why.html
@@ -18,8 +18,7 @@
 <a href="when.html" div class="button nav-button">When</a>
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
-<div class="table-container">
-<table class="custom-table"><tr><td>
+<div class="custom-table">
 <br>
 The CodeCartel solves the problems many IT professionals face.
 <ul>
@@ -33,7 +32,7 @@ The CodeCartel solves the problems many IT professionals face.
 <br>
 We develop software that <i>we use</i> to achieve work-life balance.<br>
 <p>See <a href="what.html">What</a> projects we complete together.</p>
-</td></tr></table>
+</div>
 </main>
 </body>
 </html>
