--- a/when.html
+++ b/when.html
@@ -27,7 +27,7 @@ The CodeCartel works asynchronously and also has conference calls.
 <li>To schedule a private conference call, <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0RISBOqhCEYbdOIxRYH7ZXfcyvIElLKm8IAJbd0W3X69mWTMb6naJFlvnlmENXkAeBRijPDNOX" target="_blank">click here</a></li>
 
 </ul>
-<p>The sessions are for <a href="what.html">working on projects</a>, pair programming,<br> free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
+<p>The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
 
 <p>See <a href="where.html">Where</a> we meet.</p>
 </div>
