--- a/pay.html
+++ b/pay.html
@@ -27,7 +27,7 @@
         <a href="where.html" div class="button nav-button">Where</a>
     </div>
     <div class="custom-table">
-        <p>The CodeCartel focuses projects designed to help contributors:</p>
+        <p>The CodeCartel focuses on projects that <i>help the contributors</i>:</p>
         <ul>
         <li><a href="what.html">Open source projects</a> you can use to help you achieve goals</li>
         <li>Simplistic software systems that do not require a lot code</li>
@@ -35,7 +35,7 @@
         <li>Projects that pay shares of revenue using the <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
         </ul>
 
-        <p>Payments are fully-automated, direct to you, & easy to audit.</p>
+        <p>Payments must be automated, paid directly, and easy to audit.</p>
 
         Join us at our <a href="when.html">next meeting</a> for more details.
     </div>
