--- a/what.html
+++ b/what.html
@@ -32,10 +32,9 @@ The CodeCartel automates software development tasks and making money.
 
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">Micromanager</a> completes the most tedious software development duties</p>
 <p>&#9826; <a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</p>
-<p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p>
+<p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p> <br>
 
-More projects will be listed soon.<br>
-<p>We also collaborate on projects that <a href="pay.html">have these attributes</a>.</p>
+<p>We also collaborate on projects that have <a href="pay.html">attractive attributes</a>.</p>
 
 <p>See <a href="when.html">When</a> we meet.</p>
 </div>
