Added Facebook group

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <a href="where.html" div class="button nav-button">Where</a>
 </div>
 <div class="custom-table">
-<p>The CodeCartel is a collaborative collective of IT enthusiasts.</p>
+<p>The CodeCartel is a collaborative collective of IT enthusiasts</p>
 <ul>
 <li>Web Developers</li>
 <li>Digital Designers</li>
@@ -38,8 +38,8 @@
 <li>Quality Assurance Engineers</li>
 </ul>
  
-We automate software development tasks & generate passive income.<br>
-<p>See <a href="why.html">Why</a> we collaborate.</p>
+We automate software development tasks & generate passive income<br>
+<p>See <a href="why.html">Why</a> we collaborate</p>
 </div>
 </main>
 </body>
