--- a/pay.html
+++ b/pay.html
@@ -35,9 +35,9 @@
         <li>Projects that pay shares of revenue using the <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a></li>
         </ul>
 
-        <p>Payments must be automated, paid directly, and easy to audit.</p>
+        <p>Payments must be automated, paid directly, and easy to audit</p>
 
-        Join us at our <a href="when.html">next meeting</a> for more details.
+        Join us at our <a href="when.html">next meeting</a> for more details
     </div>
 </main>
 </body>
