--- a/when.html
+++ b/when.html
@@ -28,7 +28,7 @@
 </div>
 <div class="custom-table">
 <br>
-The CodeCartel works asynchronously and also has conference calls.
+The CodeCartel works asynchronously and also has conference calls
 
 <ul>
 <li><a href="https://calendar.google.com/calendar/embed?src=3d2854a4bdb0586961a20de1bc6ef3f2d3194c7ce5ea10444ef1cfaf751f7d7a%40group.calendar.google.com&ctz=America%2FNew_York" target="_blank">Click here</a> to attend a CodeCartel conference call</li>
@@ -37,7 +37,7 @@ The CodeCartel works asynchronously and also has conference calls.
 </ul>
 <p>The sessions are for <a href="what.html">working on projects</a>, pair programming, free mentorship, brainstorming, <a href="pay.html">discussing pay</a>, team building, & fun!</p>
 
-<p>See <a href="where.html">Where</a> we meet.</p>
+<p>See <a href="where.html">Where</a> we meet</p>
 </div>
 </main>
 </body>
