--- a/why.html
+++ b/why.html
@@ -28,7 +28,7 @@
 </div>
 <div class="custom-table">
 <br>
-The CodeCartel solves the problems many IT professionals face.
+The CodeCartel solves some big problems IT professionals face
 <ul>
 <li>Interview processes are grueling, tedious, and arbitrary</li>
 <li>Companies are requiring workers to commute to the office</li>
@@ -38,8 +38,8 @@ The CodeCartel solves the problems many IT professionals face.
 <li>Management and unrealistic deadlines often reduce morale</li>
 </ul>
 <br>
-We develop software that <i>we use</i> to achieve work-life balance.<br>
-<p>See <a href="what.html">What</a> projects we complete together.</p>
+We develop software that <i>we use</i> to achieve work-life balance<br>
+<p>See <a href="what.html">What</a> projects we complete together</p>
 </div>
 </main>
 </body>
