--- a/where.html
+++ b/where.html
@@ -28,7 +28,7 @@
 </div>
 <div class="custom-table">
 <br> 
-The CodeCartel hosts online sessions (where you are comfortable).
+The CodeCartel hosts online sessions (where you are comfortable)
 <p>The scheduled conference calls are located here:</p>
 <ul>
 <li><a href="https://meet.google.com/hry-tsjj-epx" target="_blank">GoogleMeet</a></li>
@@ -36,11 +36,15 @@ The CodeCartel hosts online sessions (where you are comfortable).
 </ul>
 
 The asynchronous communication is located here:
-<ul>
-<li><a href="https://codecartelcodes.slack.com" target="_blank">Slack</a></li>
-<li><a href="https://www.reddit.com/r/Codecartel" target="_blank">Subreddit</a></li>
-<li><a href="https://groups.google.com/g/CodeCartel" target="_blank">Google Group</a></li>
-</ul>
+
+<p align="center">
+<a href="https://groups.google.com/g/CodeCartel" target="_blank">Google</a> |
+<a href="https://facebook.com/groups/codecartel.codes" target="_blank">Facebook</a> | 
+<a href="https://www.reddit.com/r/Codecartel" target="_blank">Reddit</a> |
+<a href="https://codecartelcodes.slack.com" target="_blank">Slack</a> | 
+<a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord</a>
+</p>
+To join us, simply attend our <a href="when.html">conference calls</a> and <i>contribute</i>
 </div>
 </main>
 </body>
