--- a/what.html
+++ b/what.html
@@ -30,7 +30,7 @@
 <br>
 The CodeCartel automates software development tasks and making money
 
-<p>&#9826; <a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">Micromanager</a> completes the most tedious software development duties</p>
+<p>&#9826; <a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">MicroManager</a> completes the most tedious software development duties</p>
 <p>&#9826; <a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p><br>
 
