--- a/where.html
+++ b/where.html
@@ -30,8 +30,10 @@
 <br> 
 The CodeCartel hosts online sessions (where you are comfortable)
 <p>The scheduled conference calls are located here:</p>
+
 <ul>
-<li><a href="https://meet.google.com/hry-tsjj-epx" target="_blank">GoogleMeet</a></li>
+<li><a href="https://meet.google.com/hry-tsjj-epx" target="_blank">GoogleMeet</a></li> 
+<li><a href="https://meet.google.com/vgk-gpzr-axd" target="_blank">MeetOnline</a></li>
 <li><a href="https://docs.google.com/document/d/14-S8ab3fO6S4VVaMvfE7TvwTk8rClqxfwRWjJDqu6FE" target="_blank">Whiteboard</a></li>
 </ul>
 
@@ -42,7 +44,7 @@ The asynchronous communication is located here:
 <a href="https://facebook.com/groups/codecartel.codes" target="_blank">Facebook</a> | 
 <a href="https://www.reddit.com/r/Codecartel" target="_blank">Reddit</a> |
 <a href="https://codecartelcodes.slack.com" target="_blank">Slack</a> | 
-<a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord</a>
+<a href="https://discord.gg/9t6B5w4v4Z" target="_blank">Discord</a> 
 </p>
 To join us, simply attend our <a href="when.html">conference calls</a> and <i>contribute</i>
 </div>
