Updated TrainTrack definition

--- a/what.html
+++ b/what.html
@@ -31,7 +31,7 @@
 The CodeCartel automates software development tasks and making money
 
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/micromanager/src/master/" target="_blank">MicroManager</a> completes the most tedious software development duties</p>
-<p>&#9826; <a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps a developer draft pseudocode non-programmers grasp</p>
+<p>&#9826; <a href="https://docs.google.com/document/d/1STIdZX5Q8dhf_P5xcBQ1gRyBsBa7ihlLlKCOTmms8Os" target="_blank">TrainTrack</a> helps you draft pseudocode non-programmers and AIs grasp</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/frame/src/master/" target="_blank">AliasAPI</a> sends and receives encrypted transmissions between servers</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/usersservice/src/master/" target="_blank">UsersService</a> fingerprints, authenticates, and authorizes site users</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p><br>
