--- a/what.html
+++ b/what.html
@@ -35,7 +35,8 @@ The CodeCartel automates software development tasks and making money
 <p>&#9826; <a href="https://github.com/codecartelcodes/ModuleManual" target="_blank">ModuleManual</a> guides a manager on business administrative activities</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/frame/src/master/" target="_blank">AliasAPI</a> sends and receives encrypted transmissions between servers</p>
 <p>&#9826; <a href="https://bitbucket.org/AliasAPI/usersservice/src/master/" target="_blank">UsersService</a> fingerprints, authenticates, and authorizes site users</p>
-<p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p><br>
+<p>&#9826; <a href="https://bitbucket.org/AliasAPI/moneyservice/src/master/" target="_blank">MoneyService</a> automates customer-to-affiliate financial transactions</p>
+<p>&#9826; <a href="techjobhelp.html" target="_blank">TechJob.Help</a> provides full-service support by humans to secure jobs</p><br>
 
 We also collaborate on projects that have very <a href="pay.html">attractive attributes</a>
 
