--- a/where.html
+++ b/where.html
@@ -41,6 +41,7 @@ The asynchronous communication is located here:
 
 <p align="center">
 <a href="https://groups.google.com/g/CodeCartel" target="_blank">Google</a> |
+<a href="https://chat.whatsapp.com/EtoBSnbNckt2OTqifGAwNF" target="_blank">WhatsApp</a> |
 <a href="https://facebook.com/groups/codecartel.codes" target="_blank">Facebook</a> | 
 <a href="https://www.reddit.com/r/Codecartel" target="_blank">Reddit</a> |
 <a href="https://codecartelcodes.slack.com" target="_blank">Slack</a> | 
